updates :: new sill container, new animation, a new toolbar, timeline behaviour fix, heading spacing

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -6,8 +6,8 @@
     justify-content: center;
 
     .bottom-text{
-        font-size: 1rem;
-        padding: 0.5rem;
+        font-size: 0.7rem;
+        padding: 0.2rem;
         text-align: center;
     }
 }
