--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -88,21 +88,19 @@
   .app-header {
 
     max-height: 6vh;
-    // background: transparent;
-    margin-bottom: 8vh;
+    margin-bottom: 6vh;
 
     .navbar {
       width: 90%;
       max-height: 5vh;
-      margin-top: 0.5rem;
+      margin-top: 1rem;
+      margin-bottom: 0;
       flex-direction: row;
       box-shadow: 0px 0.5px 1px rgb(116, 115, 115);
       position: fixed;
       left: 0;
       right: 0;
       z-index: 1000;
-      // background-color: red;
-
 
 
       .navbar-list {
